[gd_scene load_steps=6 format=3 uid="uid://cfywqwrw7nmrg"]

[ext_resource type="Script" path="res://IntroScene.gd" id="1_5gdv0"]
[ext_resource type="Texture2D" uid="uid://bdl8rsmufr085" path="res://UI_Concept.jpg" id="1_ibrpi"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="3_rk2n5"]
[ext_resource type="Texture2D" uid="uid://blm8iidsf21nv" path="res://Sprites/UI/menu_button.png" id="4_berla"]
[ext_resource type="PackedScene" uid="uid://w7n1fddwnc40" path="res://menu_cursor.tscn" id="5_yokoh"]

[node name="IntroScene" type="Node2D"]
script = ExtResource("1_5gdv0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UiConcept" type="Sprite2D" parent="MarginContainer"]
scale = Vector2(0.482412, 0.388489)
texture = ExtResource("1_ibrpi")
centered = false

[node name="DialogueLabel" type="RichTextLabel" parent="."]
offset_top = 482.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/default_color = Color(0, 0, 0, 1)
script = ExtResource("3_rk2n5")
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="MenuContainer" type="VBoxContainer" parent="."]
offset_left = 315.0
offset_top = 83.0
offset_right = 611.0
offset_bottom = 639.0
scale = Vector2(0.5, 0.5)

[node name="Dormitory" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Cafeteria")
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
text = "Dormitory"
icon = ExtResource("4_berla")
flat = true
icon_alignment = 1

[node name="Cafeteria" type="Button" parent="MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Dormitory")
focus_neighbor_bottom = NodePath("../Nurse\'s Office")
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
text = "Cafeteria"
icon = ExtResource("4_berla")
flat = true
icon_alignment = 1

[node name="Nurse\'s Office" type="Button" parent="MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Cafeteria")
focus_neighbor_bottom = NodePath("../Laboratory")
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
text = "Nurse's Office"
icon = ExtResource("4_berla")
flat = true
icon_alignment = 1

[node name="Laboratory" type="Button" parent="MenuContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Nurse\'s Office")
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
text = "Laboratory"
icon = ExtResource("4_berla")
flat = true
icon_alignment = 1

[node name="menu_cursor" parent="." instance=ExtResource("5_yokoh")]
menu_parent_path = NodePath("../MenuContainer")
cursor_offset = Vector2(-120, -40)

[connection signal="pressed" from="MenuContainer/Dormitory" to="." method="_on_dormitory_pressed"]
[connection signal="pressed" from="MenuContainer/Cafeteria" to="." method="_on_cafeteria_pressed"]
